// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters Renders \`filters\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Filters
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout column"
        >
          <filter-selector-stub
            filters="[object Object]"
            hidemultiply="true"
            itemtext="title"
            itemvalue="_id"
            label="Default filter"
            lockedfilters=""
            value="filter-id"
          />
          <filters-list-stub
            filters="[object Object]"
          />
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`filters Renders \`filters\` with default and required props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        Filters
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout column"
        >
          <filter-selector-stub
            filters=""
            hidemultiply="true"
            itemtext="title"
            itemvalue="_id"
            label="Default filter"
            lockedfilters=""
          />
          <filters-list-stub
            filters=""
          />
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;
